# graphics-programming-2-vulkan-project-Hassan-Aouchev

./: .gitignore  README.md  README.txt
VulkanProject/: .gitignore  CMakeLists.txt  VulkanProject.cpp  VulkanProject.h
VulkanProject/Application/: VulkanApplication.cpp  VulkanApplication.h
VulkanProject/Common/: ApplicationConfig.h  Constants.h
VulkanProject/Vulkan/: VulkanSystem.cpp  VulkanSystem.h
VulkanProject/Vulkan/source/: CommandManager.cpp  Device.cpp  Device.h  Instance.cpp  Instance.h  PipelineManager.cpp  PipelineManager.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  SwapChain.cpp  SwapChain.h
VulkanProject/Window/: CameraManager.cpp  CameraManager.h  InputManager.cpp  InputManager.h  WindowManager.cpp  WindowManager.h
VulkanProject/resources/shaders/: depthPrepass.frag  depthPrepass.vert  gbuffer.frag  gbuffer.vert  lighting.frag  shader.frag  shader.vert  tonemapping.frag  tonemapping.vert
VulkanProject/source/: CommandManager.cpp  CommandManager.h  Device.cpp  Device.h  Instance.cpp  Instance.h  PipelineManager.cpp  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  SwapChain.cpp  SwapChain.h
